init expo proj (add logo+splash)

--- a/.gitignore
+++ b/.gitignore
@@ -406,5 +406,11 @@ gradle-app.setting
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
-
+node_modules/**/*
+.expo/*
+npm-debug.*
+*.jks
+*.p12
+*.key
+*.mobileprovision
 # End of https://www.gitignore.io/api/node,pycharm,reactnative,visualstudiocode
