--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-collapsible": "^1.4.0",
+    "react-native-divider": "^1.0.3",
     "react-native-elements": "^1.1.0",
     "react-native-sortable-list": "^0.0.23",
     "react-navigation": "^3.11.0"
