--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-native-collapsible": "^1.4.0",
     "react-native-divider": "^1.0.3",
     "react-native-elements": "^1.1.0",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-material-textfield": "^0.12.0",
     "react-native-sortable-list": "^0.0.23",
     "react-navigation": "^3.11.0"
   },
