--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-material-textfield": "^0.12.0",
     "react-native-paper": "^2.15.2",
     "react-native-sortable-list": "^0.0.23",
+    "react-native-tab-view": "^2.5.0",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0"
   },
