--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native-sortable-list": "^0.0.23",
     "react-native-tab-view": "^2.5.0",
     "react-native-vector-icons": "^6.5.0",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
